[package]
name = "mcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
num_enum = "0.5.10"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
